--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
       background: #555571;
     }
     .main {
-      margin-left: 280px;
+      margin-left: 260px;
       padding: 30px 30px 20px 10px;
       flex: 1;
-      transition: margin-left 0.3s, padding 0.3s;
       min-width: 0;
       width: auto;
+      transition: margin-left 0.3s, padding 0.3s;
     }
     .section {
       background: white;
@@ -175,73 +175,110 @@
       margin-bottom: 5px;
     }
 
-    /* MOBILE STYLES: */
+    /* MOBILE STYLES: Sidebar ocupa 33vw (máx 120px), main el 67vw, ambos llenan la pantalla sin zoom */
     @media (max-width: 800px) {
+      html, body {
+        width: 100vw;
+        min-width: 100vw;
+        max-width: 100vw;
+        overflow-x: hidden;
+      }
       body {
         flex-direction: row;
       }
       .sidebar {
-        width: 260px !important;
-        min-width: 200px;
-        max-width: 100vw;
+        width: 33vw !important;
+        min-width: 90px !important;
+        max-width: 120px !important;
         height: 100vh !important;
-        padding: 10px 4px 10px 4px !important;
+        padding: 10px 3px 10px 3px !important;
         position: fixed !important;
         left: 0 !important;
         top: 0 !important;
         z-index: 1200;
         display: block !important;
       }
+      .logo-img {
+        width: 24px;
+        height: 24px;
+        margin-right: 3px;
+      }
+      .sidebar h2 {
+        font-size: 11px;
+      }
+      .refran {
+        font-size: 7px;
+        margin-top: 1px;
+        margin-left: 12px;
+        margin-bottom: 12px;
+      }
+      .menu-item {
+        margin-bottom: 6px;
+      }
+      .menu-button {
+        font-size: 11px;
+        padding: 5px 3px;
+        border-radius: 3px;
+      }
+      .submenu {
+        margin-left: 1px;
+        margin-top: 3px;
+      }
+      .submenu button {
+        font-size: 10px;
+        padding: 4px 2px;
+        border-radius: 3px;
+      }
       .main {
-        margin-left: 260px !important;
-        width: calc(100vw - 260px) !important;
+        margin-left: 33vw !important;
+        width: 67vw !important;
         min-width: 0 !important;
         max-width: 100vw !important;
-        padding: 8px 2vw 14px 2vw !important;
+        padding: 8px 2vw 12px 2vw !important;
         box-sizing: border-box !important;
       }
       .section {
-        padding: 8px;
+        padding: 6px;
         border-radius: 7px;
       }
       .product-card {
-        width: 95vw;
-        min-width: 120px;
-        margin: 6px 1vw;
-        padding: 7px;
+        width: 93vw;
+        min-width: 100px;
+        margin: 5px 1vw;
+        padding: 5px;
       }
       .product-card img {
-        height: 100px;
+        height: 70px;
       }
       .whatsapp {
-        width: 42px;
-        height: 42px;
-        left: 12px;
-        bottom: 12px;
+        width: 36px;
+        height: 36px;
+        left: 8px;
+        bottom: 8px;
       }
       .whatsapp-icon {
-        width: 22px;
-        height: 22px;
+        width: 16px;
+        height: 16px;
       }
       textarea {
-        font-size: 14px;
+        font-size: 12px;
       }
       .enviar-btn {
-        padding: 6px 10px;
-        font-size: 14px;
+        padding: 5px 7px;
+        font-size: 12px;
       }
       ul {
-        margin-left: 8px;
-        margin-top: 6px;
-        margin-bottom: 6px;
+        margin-left: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
       }
       ul li {
-        margin-bottom: 3px;
+        margin-bottom: 2px;
       }
     }
   </style>
   <script>
-    // Ajuste extra para forzar modo "app móvil" cuando es móvil
+    // Ajuste extra para forzar modo "app móvil" cuando es móvil, sidebar chico y main más ancho
     function isMobileDevice() {
       return /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(navigator.userAgent.toLowerCase());
     }
@@ -250,11 +287,11 @@
         // Sidebar
         var sidebar = document.querySelector('.sidebar');
         if (sidebar) {
-          sidebar.style.width = '260px';
-          sidebar.style.minWidth = '200px';
-          sidebar.style.maxWidth = '100vw';
+          sidebar.style.width = '33vw';
+          sidebar.style.minWidth = '90px';
+          sidebar.style.maxWidth = '120px';
           sidebar.style.height = '100vh';
-          sidebar.style.padding = '10px 4px 10px 4px';
+          sidebar.style.padding = '10px 3px 10px 3px';
           sidebar.style.position = 'fixed';
           sidebar.style.left = '0';
           sidebar.style.top = '0';
@@ -264,38 +301,38 @@
         // Main section: justo al lado del menú, llena el resto de la pantalla
         var main = document.querySelector('.main');
         if (main) {
-          main.style.marginLeft = '260px';
-          main.style.width = 'calc(100vw - 260px)';
+          main.style.marginLeft = '33vw';
+          main.style.width = '67vw';
           main.style.minWidth = '0';
           main.style.maxWidth = '100vw';
-          main.style.padding = '8px 2vw 14px 2vw';
+          main.style.padding = '8px 2vw 12px 2vw';
           main.style.boxSizing = 'border-box';
         }
         // WhatsApp
         var whatsapp = document.querySelector('.whatsapp');
         if (whatsapp) {
-          whatsapp.style.width = '42px';
-          whatsapp.style.height = '42px';
-          whatsapp.style.left = '12px';
-          whatsapp.style.bottom = '12px';
+          whatsapp.style.width = '36px';
+          whatsapp.style.height = '36px';
+          whatsapp.style.left = '8px';
+          whatsapp.style.bottom = '8px';
         }
         // Section
         var section = document.querySelector('.section');
         if (section) {
-          section.style.padding = '8px';
+          section.style.padding = '6px';
           section.style.borderRadius = '7px';
         }
         // Ajusta product cards
         var cards = document.querySelectorAll('.product-card');
         cards.forEach(function(card) {
-          card.style.width = '95vw';
-          card.style.margin = '6px 1vw';
-          card.style.padding = '7px';
+          card.style.width = '93vw';
+          card.style.margin = '5px 1vw';
+          card.style.padding = '5px';
         });
         // Ajusta imágenes de productos
         var imgs = document.querySelectorAll('.product-card img');
         imgs.forEach(function(img) {
-          img.style.height = '100px';
+          img.style.height = '70px';
         });
       }
     }
