--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       animation: fadeIn 0.5s ease;
+      font-size: 1rem;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
@@ -170,12 +171,13 @@
       margin-left: 20px;
       margin-top: 10px;
       margin-bottom: 10px;
+      font-size: 1rem;
     }
     ul li {
       margin-bottom: 5px;
     }
 
-    /* MOBILE STYLES: Sidebar ocupa 33vw (máx 120px), main el 67vw, ambos llenan la pantalla sin zoom */
+    /* MOBILE STYLES: Reduce tamaño de textos e imágenes SOLO en móvil */
     @media (max-width: 800px) {
       html, body {
         width: 100vw;
@@ -199,25 +201,25 @@
         display: block !important;
       }
       .logo-img {
-        width: 24px;
-        height: 24px;
-        margin-right: 3px;
+        width: 20px;
+        height: 20px;
+        margin-right: 2px;
       }
       .sidebar h2 {
-        font-size: 11px;
+        font-size: 9px;
       }
       .refran {
-        font-size: 7px;
+        font-size: 6px;
         margin-top: 1px;
-        margin-left: 12px;
-        margin-bottom: 12px;
+        margin-left: 8px;
+        margin-bottom: 10px;
       }
       .menu-item {
-        margin-bottom: 6px;
+        margin-bottom: 4px;
       }
       .menu-button {
-        font-size: 11px;
-        padding: 5px 3px;
+        font-size: 9px;
+        padding: 3px 2px;
         border-radius: 3px;
       }
       .submenu {
@@ -225,8 +227,8 @@
         margin-top: 3px;
       }
       .submenu button {
-        font-size: 10px;
-        padding: 4px 2px;
+        font-size: 8px;
+        padding: 2px 1px;
         border-radius: 3px;
       }
       .main {
@@ -234,51 +236,58 @@
         width: 67vw !important;
         min-width: 0 !important;
         max-width: 100vw !important;
-        padding: 8px 2vw 12px 2vw !important;
+        padding: 4px 1vw 8px 1vw !important;
         box-sizing: border-box !important;
       }
       .section {
-        padding: 6px;
+        padding: 4px;
         border-radius: 7px;
+        font-size: 0.83rem;
       }
       .product-card {
-        width: 93vw;
-        min-width: 100px;
-        margin: 5px 1vw;
-        padding: 5px;
+        width: 88vw;
+        min-width: 90px;
+        margin: 4px 1vw;
+        padding: 4px;
       }
       .product-card img {
-        height: 70px;
+        height: 40px;
       }
       .whatsapp {
-        width: 36px;
-        height: 36px;
-        left: 8px;
-        bottom: 8px;
+        width: 26px;
+        height: 26px;
+        left: 6px;
+        bottom: 6px;
       }
       .whatsapp-icon {
-        width: 16px;
-        height: 16px;
+        width: 12px;
+        height: 12px;
       }
       textarea {
-        font-size: 12px;
+        font-size: 11px;
       }
       .enviar-btn {
-        padding: 5px 7px;
-        font-size: 12px;
+        padding: 3px 5px;
+        font-size: 11px;
       }
       ul {
-        margin-left: 5px;
-        margin-top: 5px;
-        margin-bottom: 5px;
+        margin-left: 4px;
+        margin-top: 3px;
+        margin-bottom: 3px;
+        font-size: 0.83rem;
       }
       ul li {
         margin-bottom: 2px;
       }
+      h3, h2, h1 {
+        font-size: 1em !important;
+      }
+      p, span, label, div, .section, .main, .sidebar, button, input {
+        font-size: 0.85em !important;
+      }
     }
   </style>
   <script>
-    // Ajuste extra para forzar modo "app móvil" cuando es móvil, sidebar chico y main más ancho
     function isMobileDevice() {
       return /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(navigator.userAgent.toLowerCase());
     }
@@ -305,34 +314,40 @@
           main.style.width = '67vw';
           main.style.minWidth = '0';
           main.style.maxWidth = '100vw';
-          main.style.padding = '8px 2vw 12px 2vw';
+          main.style.padding = '4px 1vw 8px 1vw';
           main.style.boxSizing = 'border-box';
         }
         // WhatsApp
         var whatsapp = document.querySelector('.whatsapp');
         if (whatsapp) {
-          whatsapp.style.width = '36px';
-          whatsapp.style.height = '36px';
-          whatsapp.style.left = '8px';
-          whatsapp.style.bottom = '8px';
+          whatsapp.style.width = '26px';
+          whatsapp.style.height = '26px';
+          whatsapp.style.left = '6px';
+          whatsapp.style.bottom = '6px';
         }
         // Section
         var section = document.querySelector('.section');
         if (section) {
-          section.style.padding = '6px';
+          section.style.padding = '4px';
           section.style.borderRadius = '7px';
+          section.style.fontSize = '0.83rem';
         }
         // Ajusta product cards
         var cards = document.querySelectorAll('.product-card');
         cards.forEach(function(card) {
-          card.style.width = '93vw';
-          card.style.margin = '5px 1vw';
-          card.style.padding = '5px';
+          card.style.width = '88vw';
+          card.style.margin = '4px 1vw';
+          card.style.padding = '4px';
         });
         // Ajusta imágenes de productos
         var imgs = document.querySelectorAll('.product-card img');
         imgs.forEach(function(img) {
-          img.style.height = '70px';
+          img.style.height = '40px';
+        });
+        // Ajusta texto de lista
+        var uls = document.querySelectorAll('ul');
+        uls.forEach(function(ul) {
+          ul.style.fontSize = '0.83rem';
         });
       }
     }
