--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     }
     .main {
       margin-left: 260px;
-      padding: 30px 30px 20px 10px;
+      /* Cambia el padding para acercar el contenido a la izquierda */
+      padding: 30px 30px 20px 2px;
       flex: 1;
       min-width: 0;
       width: auto;
@@ -177,7 +178,7 @@
       margin-bottom: 5px;
     }
 
-    /* MOBILE STYLES: Reduce aún más el tamaño de texto e imágenes SOLO en móvil */
+    /* MOBILE STYLES
     @media (max-width: 800px) {
       html, body {
         width: 100vw;
@@ -236,7 +237,7 @@
         width: 67vw !important;
         min-width: 0 !important;
         max-width: 100vw !important;
-        padding: 2px 1vw 5px 1vw !important;
+        padding: 2px 1vw 5px 0.5vw !important;
         box-sizing: border-box !important;
       }
       .section {
@@ -307,14 +308,15 @@
           sidebar.style.zIndex = '1200';
           sidebar.style.display = 'block';
         }
-        // Main section: justo al lado del menú, llena el resto de la pantalla
+        // Main section
         var main = document.querySelector('.main');
         if (main) {
           main.style.marginLeft = '33vw';
           main.style.width = '67vw';
           main.style.minWidth = '0';
           main.style.maxWidth = '100vw';
-          main.style.padding = '2px 1vw 5px 1vw';
+         
+          main.style.padding = '2px 1vw 5px 0.5vw';
           main.style.boxSizing = 'border-box';
         }
         // WhatsApp
